<resources>
    <string name="app_name">Restaurant Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="let_s_neat_quality_food">Let\'s\nEat Quality Food</string>
    <string name="restaurant_address">Restaurant Address</string>
    <string name="opening_hours">Opening Hours</string>
    <string name="latest_review">Latest Review:</string>
    <string name="restaurants_details">Restaurants details</string>
    <string name="user_image">User Image</string>
    <string name="search">Search</string>
    <string name="no_restaurant_found">No restaurant found…</string>
</resources>